--- a/training_management/templates/queue_page.html
+++ b/training_management/templates/queue_page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Queue Page</title>
+    <title>Deliverable Queue Page</title>
      <script>
         function form_loader()
         {
@@ -64,7 +64,7 @@
 </head>
 <body onload="form_loader()">
     <br><br>
-    <div align="center"><h1>Queue Page</h1></div><br><br>
+    <div align="center"><h1>Sales Training Deliverable Queue Page</h1></div><br><br>
     <form name="queue_form" action="/queue/queue_submit/" method="post">
         {% csrf_token %}
         <div align="center">
