--- a/templates/profile_data.html
+++ b/templates/profile_data.html
@@ -5,6 +5,7 @@
     <title>Profile Data Page</title>
 </head>
 <body>
+    <div align="right">Logged in as: {{ profile_info.username }} <a href="/logout/">logout</a></div>
     <div align="center" ><h2>The data below is a combination of Django authentication fields and fields from the class in models.py called UserProfile.<br>  Together they make up all the information we have on the currently logged in user.</h2></div>
     <br>
     <br>
