--- a/templates/account_confirmation.html
+++ b/templates/account_confirmation.html
@@ -8,11 +8,24 @@
 <br><br><br>
 <div align="center"><h2>New account created </h2></div> <br>
 
-    <div align="center" >{{ user_message }}</div>
+    <div align="center" >{{ user_message }}
+        <table>
+            <tr><td>First Name</td><td>{{ user.first_name }}</td></tr>
+            <tr><td>Last Name</td><td>{{  user.last_name }}</td></tr>
+            <tr><td>User Name</td><td>{{ user.username }}</td></tr>
+            <tr><td>Role</td><td>{{ my_profile.role }}</td></tr>
+            <tr><td>Email</td><td>{{ user.email }}</td></tr>
+            <tr><td>Phone Number</td><td>{{ my_profile.phone }}</td></tr>
+            <tr><td>Topic Interest</td><td>{{ my_profile.topic_interest }}</td></tr>
+            <tr><td>Notes</td><td>{{ my_profile.notes }}</td></tr>
+        </table>
+    </div>
+    <br><br>
     <form name="account_confirmation_form" action="/done/" method="post">
         {% csrf_token %}
-        <br><br>
         <div align="center"><input type="submit" name="deliverable_queue" value="Deliverable Queue"/></div>
+
+
     </form>
 
 </body>
