--- a/templates/create_deliverable.html
+++ b/templates/create_deliverable.html
@@ -30,7 +30,7 @@
     <div align="right">Logged in as: {{ profile_info.username }} <a href="/logout/">logout</a></div>
     <br><br>
     <div align="center"><h1>Sales Training Deliverable Detail Page</h1></div><br><br>
-    <form name="deployment_detail_form" action="/detail/deliverable_detail_submit/" method="post">
+    <form name="deployment_detail_form" action="/detail/deliverable_detail_submit/" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <table align="center">
             <tr ><td align="center" colspan="2"></td></tr>
@@ -83,6 +83,27 @@
 
         <input type="submit" name="cancel_button"  value="Cancel"/>
         <input type="submit" name="deploy_button" value="Deploy"/></div>
+        <br><br>
+        <div align="center"><h3>File Management Section</h3></div>
+
+
+        <table align="center" border="0">
+            <tr><td><input type="file" name="document">   <button type="submit" name="upload_file" value="Upload File"> Upload File</button></td></tr>
+            <tr><td>
+                {% if url %}
+                    <p>Uploaded file: <a href="{{ url }}">{{ fname }}</a> </p>
+                {%  endif %}</td></tr>
+            <tr><td>{% autoescape off %} {{ my_links }} {% endautoescape %}</td></tr>
+         </table>
+
+
+
+
+
+
+
+
+
     </form>
 </body>
 </html>
